incremental patch added to check if the issue exists
Signed-off-by: RajrupDasid <rajrupofficialid@protonmail.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,8 @@ cache:
 
 before_script:
   - gem install bundler
+  - bundle init
+  - bundle add jekyll
   - bundle config set --local path 'vendor'
 
 pages:
